# spincd

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  main.py  pipeline.toml.example  pyproject.toml  spincd.db
.github/workflows/: build-and-push.yaml  deploy.yaml
app/: config.py  database.py  dependencies.py  main.py  seed.py  seed_data.py
app/models/: albums.py
app/routers/: albums.py
app/tests/: test_albums.py  test_main.py
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: album.ts
frontend/src/components/: CoverArt.tsx  Detail.tsx  Stats.tsx  atoms.tsx  views.tsx
frontend/src/data/: seed.ts
frontend/src/types/: album.ts  cd.ts
infrastructure/: main.tf  outputs.tf  terraform.tf  variables.tf
pipeline/: cli.py  importer.py  process.py  upload.py
scans/: rotations.json
