[project]
name = "spincd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "aiofiles>=24.1.0",
]

[dependency-groups]
pipeline = [
    "typer>=0.15",
    "opencv-python-headless>=4.10",
    "numpy>=2.0",
    "boto3>=1.34",
]

[project.scripts]
pipeline = "pipeline.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "app"]
